variables.RunFour.scala.error
Erreur de compilation :
RunFour:4: error: not found: value nbBiscuit
while (nbBiscuit < 4)
       ^RunFour:19: error: not found: value nbBiscuit
  nbBiscuit = nbBiscuit + 1
  ^